--- a/src/app/shared/components/user-avatar/user-avatar.component.html
+++ b/src/app/shared/components/user-avatar/user-avatar.component.html
@@ -29,11 +29,9 @@
     (click)="onEditClick($event)"
     type="button">
     <i class="fas fa-camera"></i>
-  </button>
-
-  <!-- Online Status Indicator (optional) -->
+  </button>  <!-- Online Status Indicator (optional) -->
   <div 
-    *ngIf="size === 'lg' || size === 'xl'"
+    *ngIf="(size === 'lg' || size === 'xl') && showOnlineStatus"
     class="absolute bottom-1 right-1 w-4 h-4 bg-green-500 rounded-full border-2 border-white">
   </div>
 </div>
